--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                     //variable that selects the corresponding text area based on which button was pressed
 
-                    let textArea = $("#user-input-" + btnHour).val();
+                    let textArea = $("#user-input" + btnHour).val();
 
                     // store the input into the the storage
                     localStorage.setItem(btnHour + " user input", textArea);
